# CoVid

./: .buildinfo  .gitattributes  .gitignore  README.md  compose.py  dodo.py  genindex.html  index.html  main.py  metrics.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini  usage.html  video_reader.py
.github/workflows/: lint.yml  sphinx-check.yml  sphinx-deploy.yml  sphinx.yml  test.yml
_sources/: index.rst.txt  usage.rst.txt
covid/: __main__.py  compose.py  covid.py  video_reader.py
docs/: conf.py  reference.rst  requirements.txt  usage.rst
po/ru/LC_MESSAGES/: covid.po
samples/: foreman_crf23.json  foreman_crf30_short.json  foreman_crf40_short.json
tests/: test_reader.py
