[metadata]
name = CoVid
version = 0.0.1
url = https://github.com/unishift/CoVid
description = Exam project for PythonDevelopment2021 course
project_urls =
    Bug Tracker = https://github.com/unishift/CoVid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: WTFPL
    Operating System :: OS Independent

[options]
packages = covid
include_package_data = True
install_requires =
    numpy>=1.20.2
    Pillow>=8.2.0
    ffms2>=0.4.5.5

[options.entry_points]
console_scripts =
    covid = covid.covid:main

[options.package_data]
covid = */*/covid.mo, *.ttf
